--- a/package.json
+++ b/package.json
@@ -23,10 +23,16 @@
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
+		"prisma": "^6.8.2",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"tailwindcss": "^4.0.0",
 		"typescript": "^5.0.0",
 		"vite": "^6.2.6"
+	},
+	"dependencies": {
+		"@auth/prisma-adapter": "^2.9.1",
+		"@prisma/client": "^6.8.2",
+		"dotenv": "^16.5.0"
 	}
 }
